# effects-nn

./: .gitignore  pyproject.toml
examples/: mlp.py
src/effects_nn/: __init__.py  nn.py  util.py
